fixed mobile layout issue

--- a/app/assets/stylesheets/counter.scss
+++ b/app/assets/stylesheets/counter.scss
@@ -107,6 +107,7 @@
 
 @media only screen and (max-width: 40em) {
   .counters{
+    height:100%;
     .counter{
       position:relative;
       top:inherit !important;
